--- a/ZWYZ/templates/goodcar.html
+++ b/ZWYZ/templates/goodcar.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>知我药妆购物车</title>
+    <title>知我药妆订单详情</title>
     <link href="{% static 'css/goodcar.css' %}" type="text/css" rel="stylesheet" />
     <link href="{% static 'common/css/common.css' %}" rel="stylesheet" type="text/css"/>
     <script src="{% static 'js/jquery-1.12.0.js' %}"></script>
@@ -191,7 +191,7 @@
                             <div class="ui-entrance" style="margin-left:15px;margin-top:10px;"></div>
                             <div class="myallinfo_show_one">
                                 <p class="myallinfo_delbtn"><a class="qingkong" href="" onclick="return confirm('您确定要清空购物车吗？');">全部清空</a></p>
-                                <p class="myallinfo_gobuybtn"><a href="list.html">继续购物</a></p>
+                                <p class="myallinfo_gobuybtn"><a href="{% url 'zwyz:listbase' %}">继续购物</a></p>
                                 <p class="myallinfo_delcheck"><a class="shanchu">复选删除</a></p>
                             </div>
                             <div class="myallinfo_show_two">
