--- a/ZWYZ/templates/orderdetail.html
+++ b/ZWYZ/templates/orderdetail.html
@@ -128,7 +128,7 @@
                             <div class="myallinfo_show_two">
 
                                 <p class="myallinfo_allpay"><span>应付金额（不含运费）：</span><i>￥</i><em id="">{{ allpay }}</em></p>
-                                <p class="myallinfo_gopaybtn"><a id="go_to_pay" style="background: deepskyblue">付款</a></p>
+                                <p class="myallinfo_gopaybtn"><a id="go_to_pay" style="background: deepskyblue" order-id="{{ order.id }}">付款</a></p>
                             </div>
                         </div>
                     </div>
