--- a/ZWYZ/templates/index.html
+++ b/ZWYZ/templates/index.html
@@ -67,7 +67,7 @@
 
             </li>
             <li id="sidebar_shopcar" class="sidebar_item sidebar_shopcar">
-                <a class="sitem_btn" href="goodcar.html">
+                <a class="sitem_btn" href="{% url 'zwyz:cart' %}">
                     <i class="sitem_btnbg"></i>
                     <span class="sshopcar_text">购物车</span>
 {#                    <span class="sshopcar_amout">0</span>#}
@@ -440,7 +440,7 @@
                         <!--<img src="images/index/12124558486672069314.jpg" />-->
                         <!--</a>-->
                         <a href="#">
-                            <img src={% static "images/index/13856306688559702181.jpg" %}/>
+                            <img src='{% static "images/index/12124558486672069314.jpg" %}'/>
                         </a>
                     </div>
 
