优化-订单详情-正在发货:truck:

--- a/ZWYZ/templates/index.html
+++ b/ZWYZ/templates/index.html
@@ -476,7 +476,7 @@
                                 <del>￥140.00</del>
                             </p>
                             <p class="mlcb_btn fr">
-                                <a class="put-cart embox" href=" ">加入购物车</a>
+                                <a class="put-cart embox" >加入购物车</a>
                             </p>
                         </div>
                         <div class="m_list_ctip">
