--- a/PythonAXF/templates/order/orderdetail.html
+++ b/PythonAXF/templates/order/orderdetail.html
@@ -1,4 +1,5 @@
 {% extends 'base/base.html' %}
+{% load static %}
 
 {% block footer %}
 {% endblock %}
@@ -30,9 +31,14 @@
             {% endfor %}
         </ul>
         </div>
-     <button class="btn btn-default">支付</button>
+
+     <button class="btn btn-default" id="alipay" data-orderid="{{ order.id }}">支付</button>
     </div>
 
 
 
+{% endblock %}
+
+{% block EXTJS %}
+    <script src="{% static 'order/js/orderdetail.js' %}"></script>
 {% endblock %}
